# leea-agent-sdk-python

./: .flake8  .gitignore  .gitmodules  Makefile  README.md  crewai.py  logger.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  transport.py
.github/workflows/: publish.yml  python-package.yml
leea_agent_sdk/: __init__.py  agent.py  api.py  protocol.py  runtime.py  transport.py  web3.py  web3_evm.py  web3_solana.py
leea_agent_sdk/protocol/: __init__.py  protocol_pb2.py  protocol_pb2.pyi
protocol/: protocol.proto
tests/functional/: test_communication.py
tests/functional/fixtures/: wallet.json  wallet2.json
tests/unit/: stubs.py  test_runtime.py  test_web3.py  test_web3_evm.py  test_web3_solana.py
tests/unit/protocol/: test_protocol.py
